--- a/index.html
+++ b/index.html
@@ -7,20 +7,26 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/heroimage.css">
+    <link rel="stylesheet" href="">
     <title>Home</title>
 </head>
 <body>
     <header>
-        <div>
-            <video src="/assets/Video/Animation_Principal.mp4" controls></video>
-            <img src="/assets/icons/no-music.png" alt="Stop music">
+
+        <div class="heroimage">
+            
+            <video  src="/assets/Video/Animation_Principal.mp4" autoplay muted loop ></video>
+            <h2> music is what moves us</h2>
+            <img class="no-music" src="/assets/icons/no-music.png" alt="Stop music">
+            
             <div>
                 <a href="#main">
-                    <img src="/assets/icons/chevron-down.png" alt="go to">
+                    <img class="go-home" src="/assets/icons/chevron-down.png" alt="go to">
                 </a>
             </div>
         </div>
+
         <nav>
             <img src="assets/images/Captura_desde_2024-10-29_12-49-27-removebg-preview(1).png" alt="This is the Ding Dom banner ">
             <a href="index.html">HOME</a>
