--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </header>
     <main>
         <img src="assets/images/Fotos del equipo/fotogrupal.jpg" alt="">
-        <p>We are the Digital World team, a multidisciplinary group passionate about technology and creativity.</p>
+        <p class="descripcion-grupo">We are the Digital World team, a multidisciplinary group passionate about technology and creativity.</p>
 
         <!-- Contenedor principal -->
         <div class="carousel-container">
