--- a/index.html
+++ b/index.html
@@ -61,20 +61,20 @@
                 <div class="card" data-index="0">
                     <img src="assets/piano.png" alt="Piano">
                     <h2>Piano</h2>
-                    <p>El piano, con sus 24 teclas, convierte los ritmos en melodías cautivadoras. ¡Un instrumento lleno de magia!</p>
-                    <button class="go-button">GO!</button>
+        <p>El piano, con sus 24 teclas, convierte los ritmos en melodías cautivadoras. ¡Un instrumento lleno de magia!</p>
+        <a href="views/instrument.html" class="go-button">GO!</a>
                 </div>
                 <div class="card active" data-index="1">
                     <img src="assets/drums.png" alt="Batería">
                     <h2>Batería</h2>
                     <p>La batería, con su ritmo poderoso, marca el pulso de la música. ¡Esencial para el ritmo y la emoción!</p>
-                    <button class="go-button">GO!</button>
+                    <a href="views/instrument.html" class="go-button">GO!</a>
                 </div>
                 <div class="card" data-index="2">
                     <img src="assets/guitar.png" alt="Guitarra">
                     <h2>Guitarra</h2>
                     <p>La guitarra, con sus vibrantes cuerdas, crea melodías que resuenan en el corazón. ¡Un instrumento lleno de pasión!</p>
-                    <button class="go-button">GO!</button>
+                    <a href="views/instrument.html" class="go-button">GO!</a>
                 </div>
             </div>
     
@@ -85,19 +85,19 @@
                         <img src="assets/piano.png" alt="Piano">
                         <h2>Piano</h2>
                         <p>El piano, con sus 24 teclas, convierte los ritmos en melodías cautivadoras. ¡Un instrumento lleno de magia!</p>
-                        <button class="go-button">GO!</button>
+                        <a href="views/instrument.html" class="go-button">GO!</a>
                     </div>
                     <div class="slide">
                         <img src="assets/drums.png" alt="Batería">
                         <h2>Batería</h2>
                         <p>La batería, con su ritmo poderoso, marca el pulso de la música. ¡Esencial para el ritmo y la emoción!</p>
-                        <button class="go-button">GO!</button>
+                        <a href="views/instrument.html" class="go-button">GO!</a>
                     </div>
                     <div class="slide">
                         <img src="assets/guitar.png" alt="Guitarra">
                         <h2>Guitarra</h2>
                         <p>La guitarra, con sus vibrantes cuerdas, crea melodías que resuenan en el corazón. ¡Un instrumento lleno de pasión!</p>
-                        <button class="go-button">GO!</button>
+                        <a href="views/instrument.html" class="go-button">GO!</a>
                     </div>
                 </div>
                 <button class="nav-button prev" id="prevButton">&lt;</button>
@@ -110,7 +110,7 @@
     <footer>
         <p class="iconos-mover">
         <a href="https://es-es.facebook.com/" target="_blank"><img src="assets/icons/icons8-facebook-48(1).png" alt="Icon facebook"></a>
-        <a href="https://www.instagram.com/" target="-blank"><img src="assets/icons/icons8-instagram-48(1).png" alt="Icon instagram"></a>
+    <a href="https://www.instagram.com/" target="-blank"><img src="assets/icons/icons8-instagram-48(1).png" alt="Icon instagram"></a>
         <a href="https://x.com/?lang=en" target="_blank"><img src="assets/icons/icons8-x-50.png" alt="Icon x"></a>    
         </p>
         <p class="parrafo-footer">© 2024 Ding Dom. Todos los derechos reservados.</p>
