resolve mergin with develop

--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
 
 <body>
     <header>
-
         <div class="heroimage">
-
             <video src="/assets/Video/Animation_Principal.mp4" autoplay muted loop></video>
             <p> music is what moves us</p>
 
@@ -50,7 +48,7 @@
             </div>
         </div>
         <div class="contenedor">
-            <img id="logo" src="assets/images/Captura_desde_2024-10-29_13-09-01-removebg-preview.png"
+            <img id="logo" src="assets/images/logo-laptop.png"
                 alt="This is the Ding Dom banner ">
             <button class="abrir-menu"> <img src="assets/icons/icons8-menu-96.png" alt="amburguesa"></button>
 
@@ -122,7 +120,7 @@
 
     </main>
 
-    <!--<aside>
+    <aside>
         <h1>INSTRUMENT GALLERY</h1>
 
 
@@ -157,11 +155,17 @@
     </aside>-->
     <footer>
         <p class="iconos-mover">
-        <a href="https://es-es.facebook.com/" target="_blank"><img src="assets/icons/icons8-facebook-48(1).png" alt="Icon facebook"></a>
-    <a href="https://www.instagram.com/" target="-blank"><img src="assets/icons/icons8-instagram-48(1).png" alt="Icon instagram"></a>
-        <a href="https://x.com/?lang=en" target="_blank"><img src="assets/icons/icons8-x-50.png" alt="Icon x"></a>    
-        </p>
-        <p class="parrafo-footer">© 2024 Ding Dom. Todos los derechos reservados.</p>
+            <a href="https://es-es.facebook.com/" target="_blank"><img src="assets/icons/icons8-facebook-48(1).png"
+                    alt="Icon facebook"></a>
+            <a href="https://www.instagram.com/" target="-blank"><img src="assets/icons/icons8-instagram-48(1).png"
+                    alt="Icon instagram"></a>
+                    <a href="https://x.com/?lang=en" target="_blank"><img src="assets/icons/icons8-x-50.png" alt="Icon x"></a>
+                </p>
+                <p class="parrafo-footer">© 2024 Ding Dom. Todos los derechos reservados.</p>
+            </footer>
+
+
+
 
     </footer>
         
