resolve conflict with develop

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
 
     </header>
-    <main>
+    <main class="imagen-debajo">
         <img src="assets/images/Fotos del equipo/fotogrupal.jpg" alt="">
         <p class="descripcion">We are the Digital World team, a multidisciplinary group passionate about technology and creativity.</p>
 
