piano arreglado con luisa

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
 
 
-    </aside>-->
+    </aside>
     <footer>
         <p class="iconos-mover">
             <a href="https://es-es.facebook.com/" target="_blank"><img src="assets/icons/icons8-facebook-48(1).png"
