solve merge conflicts

--- a/index.html
+++ b/index.html
@@ -37,8 +37,19 @@
             </div>
         </div>
         <div id="gomenu" class="contenedor">
-            <img id="logo" src="assets/images/Captura_desde_2024-10-29_13-09-01-removebg-preview.png" alt="This is the Ding Dom banner ">
-           <button class="abrir-menu"> <img src="assets/icons/icons8-menu-96.png" alt="amburguesa"></button>
+            This is the Ding Dom banner >
+          
+
+                <a href="#main">
+                    <a href="#botonhome"><img class="go-home" src="/assets/icons/chevron-down.png" alt="go to"></a>
+                </a>
+            </div>
+        </div>
+        <div class="contenedor">
+            <img id="logo" src="assets/images/logo-laptop.png"
+                alt="This is the Ding Dom banner ">
+            <button class="abrir-menu"> <img src="assets/icons/icons8-menu-96.png" alt="amburguesa"></button>
+
             <nav class="nav" id="nav">
                 <button id="cerrar"><img src="assets/icons/icons8-x-64.png" alt="x"></button>
                 <ul class="nav-list">
