Arreglos en el About

--- a/index.html
+++ b/index.html
@@ -61,20 +61,20 @@
                 <div class="card" data-index="0">
                     <img src="assets/piano.png" alt="Piano">
                     <h2>Piano</h2>
-                    <p>El piano, con sus 24 teclas, convierte los ritmos en melodías cautivadoras. ¡Un instrumento lleno de magia!</p>
-                    <button class="go-button">GO!</button>
+                    <p>The piano, with its 24 keys, turns rhythms into captivating melodies - an instrument full of magic!</p>
+                    <a href="views/instrument.html" class="go-button">GO!</a>
                 </div>
                 <div class="card active" data-index="1">
                     <img src="assets/drums.png" alt="Batería">
-                    <h2>Batería</h2>
-                    <p>La batería, con su ritmo poderoso, marca el pulso de la música. ¡Esencial para el ritmo y la emoción!</p>
-                    <button class="go-button">GO!</button>
+                    <h2>Drums</h2>
+                    <p>The drums, with their powerful beat, set the pulse of the music - essential for rhythm and emotion!</p>
+                    <a href="views/instrument.html" class="go-button">GO!</a>
                 </div>
                 <div class="card" data-index="2">
                     <img src="assets/guitar.png" alt="Guitarra">
-                    <h2>Guitarra</h2>
-                    <p>La guitarra, con sus vibrantes cuerdas, crea melodías que resuenan en el corazón. ¡Un instrumento lleno de pasión!</p>
-                    <button class="go-button">GO!</button>
+                    <h2>Guitar</h2>
+                    <p>The guitar, with its vibrant strings, creates melodies that resonate in the heart - an instrument full of passion!</p>
+                    <a href="views/instrument.html" class="go-button">GO!</a>
                 </div>
             </div>
     
@@ -84,20 +84,20 @@
                     <div class="slide">
                         <img src="assets/piano.png" alt="Piano">
                         <h2>Piano</h2>
-                        <p>El piano, con sus 24 teclas, convierte los ritmos en melodías cautivadoras. ¡Un instrumento lleno de magia!</p>
-                        <button class="go-button">GO!</button>
+                        <p>The piano, with its 24 keys, turns rhythms into captivating melodies - an instrument full of magic!</p>
+                        <a href="views/instrument.html" class="go-button">GO!</a>
                     </div>
                     <div class="slide">
-                        <img src="assets/drums.png" alt="Batería">
-                        <h2>Batería</h2>
-                        <p>La batería, con su ritmo poderoso, marca el pulso de la música. ¡Esencial para el ritmo y la emoción!</p>
-                        <button class="go-button">GO!</button>
+                        <img src="assets/drums.png" alt="Drums">
+                        <h2>Drums</h2>
+                        <p>The drums, with their powerful beat, set the pulse of the music - essential for rhythm and emotion!</p>
+                        <a href="views/instrument.html" class="go-button">GO!</a>
                     </div>
                     <div class="slide">
-                        <img src="assets/guitar.png" alt="Guitarra">
-                        <h2>Guitarra</h2>
-                        <p>La guitarra, con sus vibrantes cuerdas, crea melodías que resuenan en el corazón. ¡Un instrumento lleno de pasión!</p>
-                        <button class="go-button">GO!</button>
+                        <img src="assets/guitar.png" alt="Guitar">
+                        <h2>Guitar</h2>
+                        <p>The guitar, with its vibrant strings, creates melodies that resonate in the heart - an instrument full of passion!</p>
+                        <a href="views/instrument.html" class="go-button">GO!</a>
                     </div>
                 </div>
                 <button class="nav-button prev" id="prevButton">&lt;</button>
